# HeadSoccer3D

./: .gitignore  CMakeLists.txt  README.md
assets/models/: ball.mtl  baner1.mtl  model.mtl  sphere.mtl  tribune.mtl
assets/shaders/: default.frag  default.vert  light.frag  light.vert  lineDebug.frag  lineDebug.vert
src/: main.cpp
src/core/: application.cpp  application.hpp  debug.cpp  debug.hpp  input.cpp  input.hpp  window.cpp  window.hpp
src/engine/core/: application.cpp  application.hpp  input.cpp  window.hpp
src/engine/graphics/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderSystem.cpp  renderSystem.hpp  shader.cpp
src/engine/physics/: contact.cpp  contact.hpp  physicsSystem.cpp  physicsSystem.hpp
src/engine/world/: behaviour.hpp  component.hpp  entity.hpp  scene.cpp  scene.hpp
src/engine/world/components/: camera.hpp  collider.cpp  collider.hpp  light.hpp  meshRenderer.hpp  rigidbody.cpp  rigidbody.hpp  transform.cpp  transform.hpp
src/game/scripts/: ball.cpp  ball.hpp  baseScene.cpp  baseScene.hpp  cameraController.cpp  cameraController.hpp  footballer.cpp  footballer.hpp  playerController.cpp  playerController.hpp  playerGrounded.cpp  playerGrounded.hpp
src/graphics/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
src/physics/: contact.cpp  contact.hpp  physicsSystem.cpp  physicsSystem.hpp
src/world/: component.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp
src/world/components/: camera.cpp  camera.hpp  collider.cpp  collider.hpp  meshRenderer.cpp  meshRenderer.hpp  playerController.cpp  playerController.hpp  rigidbody.cpp  rigidbody.hpp  transform.cpp  transform.hpp
